--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
+        "@vitejs/plugin-react": "^4.3.1",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.3",
+        "mongoose": "^9.0.1",
         "multer": "^1.4.5-lts.1",
         "pdf-parse": "^1.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "@vitejs/plugin-react": "^4.3.1",
         "vite": "^5.4.2"
     },
     "devDependencies": {
